Trabalhado na cria;áo da section habilidades

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../src/images/favicon_io/favicon.ico" type="image/x-icon"> <!--Carrega o favicon-->
   <!--Stylesheets do projeto-->
-  <link rel="stylesheet" href="../src/styles/resetcss">
+  <link rel="stylesheet" href="../src/styles/reset.css">
   <link rel="stylesheet" href="../src/styles/global.css">
   <link rel="stylesheet" href="../src/styles/index.css">
   <!--Carrega os scripts da página-->
@@ -32,10 +32,44 @@
     </div>
   </section>
   
-  <section class="sobreMim">
-    <h2>Sobre mim</h2>
+  <section id="sobreMim">
+    <h3>Sobre mim</h3>
     <p>Desenvolvedor Front-end com experiência em React.js, Next.js, Redux, JavaScript, TypeScript, Styled Components, Material UI e consumo de APIs REST. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Formado em Sistemas de Informação e cursando Especialização em Front-End na Digital House Brasil.</p>
   </section>
+
+  <section id="habilidades">
+    <h3>Habilidades</h3>
+    <ul class="cardsHabilidades">
+      <li>
+        <p>HTML5</p>
+        <img src="../src/images/habilidades/html.svg" alt="">
+      </li>
+      <li>
+        <p>CSS3</p>
+        <img src="../src/images/habilidades/css.svg" alt="">
+      </li>
+      <li>
+        <p>JavaScript</p>
+        <img src="../src/images/habilidades/javascript.svg" alt="">
+      </li>
+      <li>
+        <p>Figma</p>
+        <img src="../src/images/habilidades/figma.svg" alt="">
+      </li>
+    </ul>
+  </section>
+
+  <section id="certificadosEdiplomas">
+    <h3>Certificados e diplomas</h3>
+</section>
+
+<section id="historicoProfissional">
+  <h3>Histórico profissional</h3>
+</section>
+
+<section id="projetos">
+  <h3>Projetos</h3>
+</section>
 
 </body>
 </html>
